--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Projeto Redes Sociais-a</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="redes-sociais">
+
+        </section>
+    </main>
 </body>
 </html>
+
+<!-- Modulo 04, Capitulo 23, Aula 03, 00:00
+https://www.youtube.com/watch?v=HUnltyZ9Rxg
+https://gabrielscarrara.github.io/projeto-social-meu-a
+-->
