--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador não é compativel com isso.
+            </iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
 </html>
 
-<!-- Modulo 04, Capitulo 23, Aula 03, 00:00
-https://www.youtube.com/watch?v=Gx-zp0aaOto&embeds_referring_euri=https%3A%2F%2Fwww.cursoemvideo.com%2F&source_ve_path=Mjg2NjY&feature=emb_logo
+<!-- Modulo 04, Capitulo 23, Aula 05, 00:00
+https://www.youtube.com/watch?v=1kOhJr4DXIg&t=1s
 https://gabrielscarrara.github.io/projeto-social-meu-a
 -->
