--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
 </html>
 
-<!-- Modulo 04, Capitulo 23, Aula 06, 00:00
+<!-- Modulo 04, Capitulo 23, Aula 06, 10:00
 https://www.youtube.com/watch?v=ar5UB2MxraE&embeds_referring_euri=https%3A%2F%2Fwww.cursoemvideo.com%2F&source_ve_path=Mjg2NjY&feature=emb_logo
 https://gabrielscarrara.github.io/projeto-social-meu-a
 -->
